--- a/PCSO-Linfred-API/appsettings.json
+++ b/PCSO-Linfred-API/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "server=tcp:helloali.database.windows.net,1433;database=Group3DB;trusted_connection=false;User ID=ali;Password=Abcd1234!;"
+
+
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
